# csven

./: .gitignore  Makefile  README.md  meson.build
data/: io.github.rsvzz.csven.desktop  io.github.rsvzz.csven.metainfo.xml  org.flathud.csven.desktop
flatpak/: csven.flatpak  io.github.rsvzz.csven.json  org.flathud.csven.json  org.flatpak.csven.json
flatpak/.flatpak-builder/cache/refs/heads/x86_64-io.github.rsvzz.csven.json/: build-csven  build-questk  cleanup  finish  init
flatpak/.flatpak-builder/cache/refs/heads/x86_64-org.flathud.csven.json/: build-cpfiles  build-csven  build-questk  cleanup  finish  init
flatpak/.flatpak-builder/checksums/: x86_64-io.github.rsvzz.csven.json  x86_64-org.flathud.csven.json
flatpak/.flatpak-builder/git/https_github.com_rsvzz_libquestk.git/: FETCH_HEAD  config  shallow
flatpak/.flatpak-builder/git/https_github.com_rsvzz_libquestk.git/objects/pack/: pack-bda48c2661b93d5d8cc50ee4d8b03bd799f33cfa.idx  pack-bda48c2661b93d5d8cc50ee4d8b03bd799f33cfa.pack  pack-bda48c2661b93d5d8cc50ee4d8b03bd799f33cfa.rev
flatpak/.flatpak-builder/git/https_github.com_rsvzz_simple_str_list.git/: FETCH_HEAD  config
flatpak/.flatpak-builder/git/https_github.com_rsvzz_simple_str_list.git/objects/pack/: pack-5d5dd6257aaf8918996caac4706c9b2625121493.idx  pack-5d5dd6257aaf8918996caac4706c9b2625121493.pack  pack-5d5dd6257aaf8918996caac4706c9b2625121493.rev  pack-5e119bb8cd764f5c7d9ef8086b213c5e86767980.idx  pack-5e119bb8cd764f5c7d9ef8086b213c5e86767980.pack  pack-5e119bb8cd764f5c7d9ef8086b213c5e86767980.rev
flatpak/builddir/files/: manifest.json
flatpak/builddir/files/lib/debug/lib/: libquestk.so.debug
flatpak/builddir/files/lib/debug/source/csven/include/: maptogridforname.h
flatpak/builddir/files/lib/debug/source/csven/src/model_gtk/: createtobtnforgrid.c
flatpak/builddir/files/share/csven/style/: io.github.rsvzz.csven.css
flatpak/myrepo/: summary  summary.idx
flatpak/myrepo/refs/heads/app/org.flathud.csven/x86_64/: stable
flatpak/myrepo/refs/heads/runtime/org.flathud.csven.Debug/x86_64/: stable
flatpak/myrepo/summaries/: 7567bf53c283fa6894b8cfcd2e9d0e515545dbcda7223eae869ebb8779a3fb8c-a3650ae2eeda751c006cd979cb2a4d7ecae9082917f388e4df16909e4e2b4ba8.delta  7a1f07851fd1d6a4b333344d6f6753944ab1c6e13a58512b1630fe4e96537379-a3650ae2eeda751c006cd979cb2a4d7ecae9082917f388e4df16909e4e2b4ba8.delta  d621dea1d701e8070a6f59dabfe393e07bb74ecf5a4a2921f77fd6d3ce2e37b1-a3650ae2eeda751c006cd979cb2a4d7ecae9082917f388e4df16909e4e2b4ba8.delta
flatpak/repo/: summary  summary.idx
flatpak/repo/refs/heads/app/io.github.rsvzz.csven/x86_64/: master
flatpak/repo/refs/heads/runtime/io.github.rsvzz.csven.Debug/x86_64/: master
flatpak/repo/summaries/: 5a88899f7604bddaadde177d83b00e4b94851e0af589e106c70f6e59d5edf41a-77e339976e3ab02ab1de8958260e2d29674b5cfba4a36fb4c170df94acc14da2.delta
include/: app.h  app_main.h  comparetoindex.h  create_verb_win.h  createtobtnforgrid.h  createtoverb.h  ctobutton.h  ctogrid.h  dragpg.h  gdragdrop.h  mapcss.h  menu.h  nav.h  nav_main.h  option_verb.h  str_data.h  sv_header.h  verbpg.h  word_game.h  wordpg.h
snap/: snapcraft.yaml
src/: main.c  meson.build
src/model_gtk/: app.c  appmain.c  comperetoindex.c  createtobtnforgrid.c  createtobutton.c  createtoverb.c  dragpg.c  gdragdrop.c  gridtobutton.c  mapcss.c  maptogridwithname.c  menu.c  meson.build  nav.c  nav_main.c  optionverb.c  sv_header.c  verbpg.c  wordgame.c  wordpg.c
src/win/: app.c  cverbwin.c  meson.build
style/: io.github.rsvzz.csven.css
